<resources>
    <string name="app_name">Expense Manager</string>

    <!--    login and signup transitions-->
    <string name="login_icon_tran">login_icon_tran</string>
    <string name="login_title_tran">login_title_tran</string>
    <string name="login_email_tran">login_email_tran</string>
    <string name="login_password_tran">login_password_tran</string>
    <string name="login_btn_tran">login_btn_tran</string>
    <string name="login_new_user_tran">login_new_user_tran</string>
    <string name="login_register_tran">login_register_tran</string>
    <string name="your_web_client_id">521810552194-ln9urp91tdjfrd0oami29fh8in41m1le.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="change_pass_msg">Sorry, your current session has expired. Please log in again to access the app.</string>
</resources>